# semantic-html

./: .gitignore  CITATION.cff  README.md  pyproject.toml
HTML_rdf_parser/: models.py  parser.py  utils.py
docs/: conf.py  index.md
semantic_html/: models.py  parser.py  plugins.py  utils.py
tests/: Testing.ipynb  test_parser.py
