[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "html_rdf_parser"
version = "0.1.0"
description = "Parse HTML Notes into RDF-compatible JSON-LD structures."
authors = [
    { name="Christoph Sander", email="c-sander@heimat.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml=5.1.0",
    "beautifulsoup4=4.12.2"
]
