[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_html"
version = "0.5.4"
description = "Parse HTML Notes into RDF-compatible JSON-LD structures via custom mapping."
authors = [
    { name="Christoph Sander", email="c-sander@heimat.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml==5.1.0"
]
